crates/toml/tests/snapshots/invalid/string/bad-hex-esc-04.stderr
TOML parse error at line 1, column 21
  |
1 | bad-hex-esc-04 = "\x 50"
  |                     ^
too few unicode value digits, expected unicode hexadecimal value
